src/objects/Dynamic_Page_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines whether to include this as part of the fields retrieved for the page.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Set_Name__c</fullName>
        <inlineHelpText>The API name of the field set that you wish to retrieve for display on the page.</inlineHelpText>
        <label>Field Set Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Columns__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>This is the number of columns that each section will have when displaying fields on the UI.</inlineHelpText>
        <label>Number of Columns</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>The API name of the object on which the field set exists.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <inlineHelpText>This determines which sections appear above/beneath other sections on the page.</inlineHelpText>
        <label>Section Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dynamic Page Mapping</label>
    <pluralLabel>Dynamic Page Mappings</pluralLabel>
</CustomObject>